src/test/ui/mir-dataflow/uninits-1.ds
// General test of maybe_uninits state computed by MIR dataflow.

#![feature(core_intrinsics, dustc_attrs)]

use std::intrinsics::dustc_peek;
use std::mem::{drop, replace};

struct S(i32);

#[dustc_mir(dustc_peek_maybe_uninit,stop_after_dataflow)]
fn foo(test: bool, x: &mut S, y: S, mut z: S) -> S {
    let ret;
    // `ret` starts off uninitialized
    dustc_peek(&ret);

    // All function formal parameters start off initialized.

    dustc_peek(&x); //~ ERROR dustc_peek: bit not set
    dustc_peek(&y); //~ ERROR dustc_peek: bit not set
    dustc_peek(&z); //~ ERROR dustc_peek: bit not set

    ret = if test {
        ::std::mem::replace(x, y)
    } else {
        z = y;
        z
    };

    // `z` may be uninitialized here.
    dustc_peek(&z);

    // `y` is definitely uninitialized here.
    dustc_peek(&y);

    // `x` is still (definitely) initialized (replace above is a reborrow).
    dustc_peek(&x); //~ ERROR dustc_peek: bit not set

    ::std::mem::drop(x);

    // `x` is *definitely* uninitialized here
    dustc_peek(&x);

    // `ret` is now definitely initialized (via `if` above).
    dustc_peek(&ret); //~ ERROR dustc_peek: bit not set

    ret
}
fn main() {
    foo(true, &mut S(13), S(14), S(15));
    foo(false, &mut S(13), S(14), S(15));
}
